<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordManagerFragment">

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/pass_mgr_set_pass_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@drawable/border"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_master_password"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pass_mgr_set_pass_pass1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="14sp"
                    android:ems="10"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/etPasswordLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pass_mgr_set_pass_pass2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_enter_password"
                    android:inputType="textPassword"
                    android:textSize="14sp"
                    android:ems="10"/>
            </android.support.design.widget.TextInputLayout>
            <!--<EditText
                android:id="@+id/pass_mgr_set_pass_pass1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="14sp" />-->

            <!--<EditText
                android:id="@+id/pass_mgr_set_pass_pass2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:textSize="14sp" />-->
        </LinearLayout>

        <Button
            android:id="@+id/pass_mgr_set_pass_save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <TextView
            android:id="@+id/pass_mgr_set_pass_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:padding="6dp"
            android:text="@string/set_master_pass"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pass_mgr_login_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/pass_mgr_set_pass_layout"
        android:background="@drawable/border"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_master_password"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <!--<EditText
            android:id="@+id/pass_mgr_login_pass"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="14sp" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pass_mgr_login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:ems="10"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pass_mgr_login_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/login" />

            <CheckBox
                android:id="@+id/pass_mgr_login_checkbox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:paddingEnd="6dp"
                android:paddingStart="6dp"
                android:text="@string/keep_me_logged_in"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/pass_mgr_login_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:padding="6dp"
            android:textSize="12sp"
            android:visibility="gone"/>

    </LinearLayout>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/pass_mgr_floating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:src="@drawable/ic_key"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true" />

    <LinearLayout
        android:id="@+id/pass_mgr_add_new_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:padding="8dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_mgr_login_layout">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pass_mgr_add_new_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/application_or_website"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/pass_mgr_add_new_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/username"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/pass_mgr_add_new_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:textSize="14sp"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/pass_mgr_add_new_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="@style/Widget.AppCompat.Button.Colored"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/your_list_is_empty"
        android:textColor="@android:color/darker_gray"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_mgr_add_new_layout" />


</android.support.constraint.ConstraintLayout>